Add ROLE to the UserDetail, block access to /user/** to non ADMIN, update 403 page.